adding coderabbit suggestions

--- a/doc/declarative-state-allocation/s3.md
+++ b/doc/declarative-state-allocation/s3.md
@@ -1,4 +1,4 @@
-Allocate volumes using OAM definition
+Allocate s3 buckets using OAM definition
 ===============
 
 This document covers the capability to declaratively allocate state using AWS [S3](https://aws.amazon.com//s3/) (Simple Storage Service) buckets. This capability uses [CrossPlane](https://crossplane.io/) addon to interact with AWS APIs and create cloud resources using straightforward Application definitions from OAM/kubeVela.
@@ -28,7 +28,7 @@ This Application will create some CrossPlane objects on top of Kubernetes:
 - Policy
 - RolePolicyAttachment
 
-It is important to note that s3 buckets are global objects, so they have to use unique names. If we try to create an OAM Application with s3 component using a name of an existing bucket, we have these behaviors:
+It is important to note that s3 bucket names are globally unique. If we try to create an OAM Application with s3 component using a name of an existing bucket, we have these behaviors:
 
 1. If the target bucket is from our AWS account:<br>
     CrossPlane will import the target and start managing its state. This is exactly the same as importing some living resource state using Terraform.
